[package]
name = "agengine"
version = "0.1.0"
authors = ["Luc Bergeron <psyluche@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simdnoise = "3.1.6"
bmp = "0.5.0"
ggez = "0.5"
find_folder = "0.3.0"
rand = "0.7.3"
legion = "0.3.0"

[profile.dev]
opt-level = 0
